fix: homePage z-index & workPage min-height

--- a/src/layouts/HomePage/styles.module.scss
+++ b/src/layouts/HomePage/styles.module.scss
@@ -10,7 +10,7 @@
     right: 0;
     padding: 0 42px 30px 0;
 
-    z-index: 3;
+    z-index: 4;
     pointer-events: none;
   }
 }
@@ -21,7 +21,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   transition: 1s;
 }
 
@@ -42,7 +42,7 @@
   border-radius: 50%;
   border: none;
   background-color: rgba(white, 0);
-  z-index: 3;
+  z-index: 4;
 
   .bar {
     position: absolute;
